...
                    NavigationLink {
                        CalendarDetailView(repository: calendarRepository, date: date)
                            .environment(toast)
                    } label: {
                        Text("link")
                    }
                    Button("update") {
                        if let record = try? calendarRepository.getRecord(year: date.year, month: date.month, day: date.day) {
                            self.record = record
                        }
                    }
                }
            } else if CommandLine.arguments.contains("ToastViewTests") {
...
                } else if CommandLine.arguments.contains("testLogin") {
                    ContentView(calendarViewModel: CalendarViewModel(ToastCalendarRecordRepository()), loginViewModel: LoginViewModel(LoginAuthRepository()))
                }
            } else if CommandLine.arguments.contains("LoginViewTests") {
                LoginView(viewModel: login)
                Text(text)
                    .accessibilityIdentifier("text_login")
                Button("update") {
                    text = authRepository.isLoggedIn() ? "logged in" : "logged out"
                }
            }
        }
    }
...
